More dashboard rest api and added UI for widgets.
