# backend/api/endpoints/dashboard.go
@@ -15,7 +15,7 @@ import (
 //	@Accept			json
 //	@Produce		json
 //	@Success		200	{object}	[]models.Dashboard
-//	@Failure		500	{string}	string	"ok"
+//	@Failure		500
 //	@Router			/dashboard/all [get]
 func GetAllDashboards(ctx *gin.Context) {
 	entities, dbErr := database.GetAllEntities([]models.Dashboard{})
@@ -37,8 +37,8 @@ func GetAllDashboards(ctx *gin.Context) {
 //	@Produce		json
 //	@Param			dashboard body		models.Dashboard	true		"The dashboard to create"
 //	@Success		201	{object}		models.Dashboard
-//	@Failure		400	{string}		string				"ok"
-//	@Failure		500	{string}		string				"ok"
+//	@Failure		400
+//	@Failure		500
 //	@Router			/dashboard [post]
 func PostDashboard(ctx *gin.Context) {
 
@@ -57,4 +57,27 @@ func PostDashboard(ctx *gin.Context) {
 	}
 
 	ctx.JSON(201, entity)
+}
+
+// DeleteDashboard backend
+//
+//	@Summary		Delete a dashboard
+//	@Description	Checks the ID in the database, and deletes that entry if present
+//	@ID				delete-dashboard
+//	@Tags			dashboard
+//	@Param          id   path      int  true  "Dashboard ID"
+//	@Success		204
+//	@Failure		500
+//	@Router			/dashboard/{id} [delete]
+func DeleteDashboard(ctx *gin.Context) {
+
+	param := ctx.Param("id")
+	dbErr := database.DeleteEntityById(models.Dashboard{}, param)
+	if dbErr != nil {
+		fmt.Println(dbErr.Error())
+		ctx.AbortWithStatus(500)
+		return
+	}
+
+	ctx.JSON(204, nil)
 }
