# docs/swagger.yaml
@@ -103,14 +103,28 @@ paths:
           schema:
             $ref: '#/definitions/models.Dashboard'
         "400":
-          description: ok
-          schema:
-            type: string
+          description: Bad Request
         "500":
-          description: ok
-          schema:
-            type: string
+          description: Internal Server Error
       summary: Create a new Dashboard
+      tags:
+      - dashboard
+  /dashboard/{id}:
+    delete:
+      description: Checks the ID in the database, and deletes that entry if present
+      operationId: delete-dashboard
+      parameters:
+      - description: Dashboard ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "204":
+          description: No Content
+        "500":
+          description: Internal Server Error
+      summary: Delete a dashboard
       tags:
       - dashboard
   /dashboard/all:
@@ -128,9 +142,7 @@ paths:
               $ref: '#/definitions/models.Dashboard'
             type: array
         "500":
-          description: ok
-          schema:
-            type: string
+          description: Internal Server Error
       summary: Get all dashboards
       tags:
       - dashboard
